# rules_devbox

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  devbox.json  go.mod
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
cmd/devbox_parser/: BUILD.bazel  main.go
devbox/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
devbox/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
devbox/tests/: versions_test.bzl
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
example/: BUILD.bazel  pulumi_cli.sh
extensions/: package.bzl  repository.bzl
parser/: BUILD.bazel  parser.go
