module(
    name = "rules_devbox_core",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_nixpkgs_core", version = "0.12.0")

devbox_repo = use_extension("//extensions:repository.bzl", "devbox_repo")
devbox_repo.lockfile(
    path = "//:devbox.lock",
)
use_repo(devbox_repo, "buildifier_nix_repo", "pulumi_nix_repo")

devbox_pkg = use_extension("//extensions:package.bzl", "devbox_pkg")
devbox_pkg.pkg(
    pkg = "buildifier",
)
devbox_pkg.pkg(
    pkg = "pulumi",
)
use_repo(devbox_pkg, "pulumi")
