load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "devbox_parser_lib",
    srcs = ["main.go"],
    importpath = "github.com/aaomidi/rules_devbox/cmd/devbox_parser",
    visibility = ["//visibility:private"],
    deps = ["//parser"],
)

go_binary(
    name = "devbox_parser",
    embed = [":devbox_parser_lib"],
    visibility = ["//visibility:public"],
)
