# Override http_archive for local testing
local_repository(
    name = "com_aaomidi_rules_devbox",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_devbox setup #
######################
# Fetches the rules_devbox dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_aaomidi_rules_devbox//devbox:repositories.bzl", "rules_devbox_dependencies")

rules_devbox_dependencies()
